Fix IE11 text wrap problem

--- a/src/components/ui/ReadOnlyField/ReadOnlyField.less
+++ b/src/components/ui/ReadOnlyField/ReadOnlyField.less
@@ -1,5 +1,6 @@
 .readOnlyField {
     display: inline-block;
+    max-width: 100%; // IE11 text wrap
     font-size: 14px;
     line-height: 16px;
     color: rgba(0, 0, 0, 0.65);
